PracticaFinal/errores.txt
./PracticaFinal/Supermercado.c: In function ‘writeLogMessage’:
./PracticaFinal/Supermercado.c:254:13: error: assignment to expression with array type
  254 |     logFile = fopen(logFileName, "a");
      |             ^
./PracticaFinal/Supermercado.c:255:13: warning: passing argument 1 of ‘fprintf’ from incompatible pointer type [-Wincompatible-pointer-types]
  255 |     fprintf(logFile, "[%s] %s: %s\n", stnow, id, msg);
      |             ^~~~~~~
      |             |
      |             char *
In file included from ./PracticaFinal/Supermercado.c:1:
/usr/include/stdio.h:350:38: note: expected ‘FILE * restrict’ but argument is of type ‘char *’
  350 | extern int fprintf (FILE *__restrict __stream,
      |                     ~~~~~~~~~~~~~~~~~^~~~~~~~
./PracticaFinal/Supermercado.c:256:12: warning: passing argument 1 of ‘fclose’ from incompatible pointer type [-Wincompatible-pointer-types]
  256 |     fclose(logFile);
      |            ^~~~~~~
      |            |
      |            char *
In file included from ./PracticaFinal/Supermercado.c:1:
/usr/include/stdio.h:178:26: note: expected ‘FILE *’ but argument is of type ‘char *’
  178 | extern int fclose (FILE *__stream);
      |                    ~~~~~~^~~~~~~~
